# solfunmeme-metameme

./: ACHIEVEMENT_SUMMARY.md  Cargo.toml  README.md
crates/emoji-semantics/: Cargo.toml
crates/emoji-semantics/src/: lib.rs
crates/lambda-calculus-core/: Cargo.toml
crates/lambda-calculus-core/src/: lib.rs
crates/minimal-runtime-server/: Cargo.toml
crates/minimal-runtime-server/src/: lib.rs
crates/stanza-universe/: Cargo.toml
crates/stanza-universe/src/: lib.rs
src/: lib.rs
src/commands/: analyze_emoji.rs  create_quine.rs  create_universe.rs  evolve_stanza.rs  generate_nft_collection.rs  generate_stanza.rs  instrumented_run.rs  launch_repl.rs  mod.rs  show_stats.rs
src/engine/: engine.rs  evolution_result.rs  generated_poem.rs  impl_default.rs  impl_engine.rs  mod.rs  quine_result.rs
src/engine/methods/: create_quine.rs  evolve_universe.rs  generate_nft_collection.rs  generate_poem.rs  generate_poetic_text.rs  generate_rarity_based_emoji.rs  mod.rs  new.rs
tests/: integration_tests.rs
tools/: coccinelleforrust
