[package]
name = "solfunmeme-metameme"
version = "0.1.0"
edition = "2021"
description = "🌀 SOLFUNMEME: The Ultimate Self-Replicating MetaMeme - 9,901 NFT Lambda Calculus Poetry Collection on Solana"
license = "AGPL-3.0"
repository = "https://github.com/meta-introspector/solfunmeme-metameme"
keywords = ["solana", "nft", "lambda-calculus", "meme", "ai", "poetry", "blockchain", "emoji"]
categories = ["cryptography", "web-programming", "mathematics", "multimedia"]

[workspace]
members = [
    "crates/lambda-calculus-core",
    "crates/emoji-semantics", 
    "crates/stanza-universe",
]

[workspace.dependencies]
# Serialization & data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }

[dependencies]
# Core workspace dependencies
lambda-calculus-core = { path = "crates/lambda-calculus-core" }
emoji-semantics = { path = "crates/emoji-semantics" }
stanza-universe = { path = "crates/stanza-universe" }

# External dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[features]
default = []

[[bin]]
name = "solfunmeme"
path = "src/bin/main.rs"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
