[package]
name = "lambda-calculus-core"
version = "0.1.0"
edition = "2021"
description = "🧬 Self-Replicating Lambda Calculus Engine for SOLFUNMEME MetaMeme Poetry"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
